--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.11.0",
     "split-type": "^0.3.4",
+    "stats-gl": "^3.8.0",
     "tailwindcss": "^4.1.18",
     "three": "^0.182.0",
     "vanta": "^0.5.24"
